# delivery-tracking-etl

./: .editorconfig  .env.example  LICENSE  README.md  pyproject.toml  run_assign_estimated_delivery_date.sh  run_data_importer.sh  run_etl_assign_10_estimated_deliverydate.sh  run_etl_assign_13_embarked_to_destination.sh  run_etl_assign_17_disembarked_at_destination.sh  run_etl_assign_40_delivered.sh  run_etl_assign_estimated_deliverydate.sh  run_etl_data_importer.sh  run_etl_notification_deliverycompleted.sh
DataImporter/: importer.py
delivery_tracking_etl/: assign_estimated_delivery_date.py  config_db.py  config_dt.py  config_etlassign.py  config_sendermail.py  config_smtp.py  data_importer.py  etl_assign_10_estimated_deliverydate.py  etl_assign_13_embarked_to_destination.py  etl_assign_17_disembarked_at_destination.py  etl_assign_40_delivered.py  etl_assign_estimated_delivery_date.py  etl_assign_estimated_deliverydate.py  etl_data_importer.py  etl_notification_deliverycompleted.py  logger_config.py  util_classes.py  util_dt.py
delivery_tracking_etl/templates/: notification_deliverycompleted_template.html
